# whoop-analytics

./: .env.example  .gitignore  BRAINSTORM.md  CLAUDE.md  Dockerfile  README.md  preview_dashboard.py  pyproject.toml
.github/workflows/: daily-report.yml  deploy-pages.yml  sync-to-hf.yml
.streamlit/: config.toml  secrets.toml.example
data/: whoop_export.tar.gz.gpg
docs/: index.html
docs/superpowers/plans/: 2026-06-08-whoop-causal-analytics.md  2026-06-09-streamlit-dashboard.md  2026-06-16-cached-login.md
notebooks/: README.md  sleep_causal_analysis.ipynb
scripts/: build_daily_from_export.py  causal_discovery.py  effect_sizes.py
src/whoop_analytics/: __init__.py  cli.py  config.py  setup.py
src/whoop_analytics/analysis/: __init__.py  discovery.py  estimation.py
src/whoop_analytics/api/: __init__.py  auth.py  client.py  models.py
src/whoop_analytics/dashboard/: app.py  state.py
src/whoop_analytics/dashboard/pages/: causal.py  effects.py  overview.py
src/whoop_analytics/pipeline/: features.py  ingest.py  transform.py
src/whoop_analytics/report/: generator.py  html_report.py
src/whoop_analytics/web/: app.py
src/whoop_analytics/web/templates/: dashboard.html  login.html  results.html
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_dashboard_state.py  test_discovery.py  test_estimation.py  test_features.py  test_ingest.py  test_models.py  test_report.py  test_token_cache.py  test_transform.py
