[project]
name = "whoop-analytics"
version = "0.1.0"
description = "Causal inference on Whoop sleep/HRV data to explain brain fog"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "tigramite>=5.2",
    "dowhy>=0.11",
    "networkx>=3.0",
    "scipy>=1.10",
    "pyarrow>=14.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "plotly>=5.18",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
whoop-analytics = "whoop_analytics.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
